<resources>
    <string name="app_name">SkincareOrder</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_zip">Enter ZIP Code</string>
    <string name="card_details">Card Details</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_card_expiry">Enter Card Expiry Date</string>
    <string name="enter_card_pin">Enter Card PIN</string>
    <string name="your_order">Your Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="delivery_charge_amount">$5.00</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="customer_details">Customer Details</string>
</resources>