<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceOrder"
    android:background="@drawable/mainback">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/CustomerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/customer_details"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bg"
            android:hint="@string/enter_name"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/brown"
            android:inputType="textPersonName"
            android:autofillHints="name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CustomerDetails" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/Pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/pickup"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            app:layout_constraintEnd_toStartOf="@id/switchDelivery"
            app:layout_constraintTop_toTopOf="@id/switchDelivery"
            app:layout_constraintBottom_toBottomOf="@id/switchDelivery" />

        <TextView
            android:id="@+id/Delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/delivery"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            app:layout_constraintStart_toEndOf="@id/switchDelivery"
            app:layout_constraintTop_toTopOf="@id/switchDelivery"
            app:layout_constraintBottom_toBottomOf="@id/switchDelivery" />

        <EditText
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bg"
            android:hint="@string/enter_address"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/brown"
            android:visibility="gone"
            android:inputType="textPostalAddress"
            android:autofillHints="postalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Delivery" />

        <EditText
            android:id="@+id/inputCity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bg"
            android:hint="@string/enter_city"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/brown"
            android:visibility="gone"
            android:inputType="text"
            android:autofillHints="addressLocality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputAddress" />

        <EditText
            android:id="@+id/inputState"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bg"
            android:hint="@string/enter_state"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/brown"
            android:visibility="gone"
            android:inputType="text"
            android:autofillHints="addressRegion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCity" />

        <EditText
            android:id="@+id/inputZip"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bg"
            android:hint="@string/enter_zip"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/brown"
            android:visibility="gone"
            android:inputType="number"
            android:autofillHints="postalCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputState" />

        <TextView
            android:id="@+id/CardDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/card_details"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputZip" />

        <EditText
            android:id="@+id/inputCardNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bg"
            android:hint="@string/enter_card_number"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/brown"
            android:inputType="number"
            android:autofillHints="creditCardNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CardDetails" />

        <EditText
            android:id="@+id/inputCardExpiry"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bg"
            android:hint="@string/enter_card_expiry"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/brown"
            android:inputType="text"
            android:autofillHints="creditCardExpirationDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCardNumber" />

        <EditText
            android:id="@+id/inputCardPin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bg"
            android:hint="@string/enter_card_pin"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/brown"
            android:inputType="numberPassword"
            android:autofillHints="creditCardSecurityCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCardExpiry" />

        <TextView
            android:id="@+id/yourOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/your_order"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCardPin" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="4dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/yourOrder" />

        <!-- Subtotal Text -->
        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/subtotal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemsRecycler" />

        <TextView
            android:id="@+id/subtotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="$0.0"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemsRecycler" />

        <!-- Delivery Charge Text -->
        <TextView
            android:id="@+id/Deliverycharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delivery_charge"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtotal" />

        <TextView
            android:id="@+id/DeliverychargeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="$0.0"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtotal" />

        <!-- Total Amount Text -->
        <TextView
            android:id="@+id/Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/total"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Deliverycharge" />

        <TextView
            android:id="@+id/TotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="$0.0"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Deliverycharge" />

        <!-- Place Order Button -->
        <TextView
            android:id="@+id/btnPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/place_order"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TotalAmount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
